examples/examples_inferred/bad/too_few_args.ez
f x y = x + y;

main = f 1;